z-index fix

--- a/public_html/sass/menu/_style.scss
+++ b/public_html/sass/menu/_style.scss
@@ -128,6 +128,7 @@
 	border-width: 0px 0px 50px 120px;
 	// background-color: rgba(0,0,0,1);
 	@include transition(border-width 0.3s, background-color 0.3s);
+	z-index: 9;
 	ul {
 		li {
 			visibility: visible;
@@ -156,7 +157,7 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		// z-index: 100;
+		z-index: 15;
 	}
 	.trigger {
 		background: none;
