--- a/public_html/sass/screen.scss
+++ b/public_html/sass/screen.scss
@@ -95,7 +95,7 @@ img {
 	    width: 100%;
 	    top: 0;
 	    opacity: 0.5;
-	    // z-index: 2;
+	    z-index: 2;
 	}
 }
 #bigtext {
